Changes after testing

--- a/teensy/platformio.ini
+++ b/teensy/platformio.ini
@@ -12,15 +12,19 @@
 default_envs = teensy31
 
 [common_env_data]
-;build_flags = -D SERIAL_9BIT_SUPPORT
+build_flags =
+	-D SERIAL_9BIT_SUPPORT
+	-D USB_SERIAL
 ;upload_protocol = teensy-cli
 
 [env:teensy31]
 platform = teensy
 board = teensy31
 framework = arduino
+build_flags = ${common_env_data.build_flags}
 
 [env:teensy36]
 platform = teensy
 board = teensy36
 framework = arduino
+build_flags = ${common_env_data.build_flags}
