Enough protocol to allow vending!
- Cashless init works correctly
- When in the Enabled state, every poll will start a vend session
- Also, minor log changes

--- a/teensy/platformio.ini
+++ b/teensy/platformio.ini
@@ -14,7 +14,7 @@ default_envs = teensy31
 [common_env_data]
 build_flags =
 	-D SERIAL_9BIT_SUPPORT
-	-D USB_SERIAL
+	-D USB_EVERYTHING
 ;upload_protocol = teensy-cli
 
 [env:teensy31]
